# MachineLearningLab

./: .gitignore  CMakeLists.txt  README.md
MachineLearningLab/: MachineLearningLab.vcxproj
MachineLearningLab/src/: MainForm.h  attempts.cpp
MachineLearningLab/src/Classification/: DecisionTreeClassification.cpp  KNNClassifier.cpp  LogisticRegression.cpp  LogisticRegression.h
MachineLearningLab/src/Clustering/: FuzzyCMeans.cpp  KMeans.cpp
MachineLearningLab/src/Regression/: DecisionTreeRegression.cpp  KNNRegression.cpp  LinearRegression.cpp  LinearRegression.h
MachineLearningLab/src/Utils/: EntropyFunctions.cpp  SimilarityFunctions.cpp  SimilarityFunctions.h
